--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
     "debug": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
